Fix menu hover on mobile

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -250,9 +250,8 @@ header {
                 text-align: center;
                 // border-bottom: 1px solid #A3A3A3;
                 &:hover {
-                    display:none;
-                &:after {
-                   content:'';
+                  &:after {
+                 display:none;
                 }
             }
             }
